tests/baselines/reference/parserStatementIsNotAMemberVariableDeclaration1.errors.txt
parserStatementIsNotAMemberVariableDeclaration1.ts(1,1): error TS1108: A 'return' statement can only be used within a function body.


==== parserStatementIsNotAMemberVariableDeclaration1.ts (1 errors) ====
    return {
    ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.
    
      "set": function (key, value) {
    
        // 'private' should not be considered a member variable here.
        private[key] = value;
    
      }
    
    };